--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target= "#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
-          <sapn class="icon-bar"></sapn>
+          <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">Microposts</a>
@@ -15,16 +15,16 @@
           <% if logged_in? %>
             <li><%= link_to 'Users', users_path %></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"><%= current_user.name %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to 'My profile', user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'Logout', logout_path, method: :delete %></li>
               </ul>  
             </li>
-          <% end %>
-          <li><%= link_to 'Signup', signup_path %></li>
-          <li><%= link_to 'Login', login_path %></li>
+          <% else %>
+            <li><%= link_to 'Signup', signup_path %></li>
+            <li><%= link_to 'Login', login_path %></li>
           <% end %>
         </ul>
       </div>
